@@ -8,13 +8,18 @@ import io.swagger.v3.oas.models.info.License;
 import io.swagger.v3.oas.models.security.SecurityRequirement;
 import io.swagger.v3.oas.models.security.SecurityScheme;
 import io.swagger.v3.oas.models.servers.Server;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
 public class OpenApiConfig {
+
+    @Value("${spring.application.name}")
+    private String applicationName;
 
     @Bean
     public OpenAPI customOpenAPI() {
@@ -32,7 +37,8 @@ public class OpenApiConfig {
                         .license(new License()
                                 .name("Apache 2.0")
                                 .url("https://www.apache.org/licenses/LICENSE-2.0")))
-                .servers(List.of(
+                .servers(Arrays.asList(
+                        new Server().url("/").description("Production server"),
                         new Server().url("http://localhost:8080").description("Local server")
                 ))
                 .addSecurityItem(new SecurityRequirement().addList(securitySchemeName))
